multi-tenancy and model extensions support (#59)
- added support for multi-tenancy
   additional mysql dbs
   
- added support for model extensions
   capturing additions in review and product
- updated openapi specs to support additions field
- added spring profile to use m10y mode

- ssdk version 12.1.0

- added tenant specific custom configuration
   different header per tenant

- added tenant specific model extensions
   different properties expected

- using default versions of db drivers instead of downgrading
   fixes issues with creating per tenant datasource

- added a test profile that sets up integration tests

- review fixes
