# api/store-client-api/src/main/resources/openapi-v1.yaml
@@ -54,45 +54,16 @@ paths:
             format: int64
       responses:
         '200':
-          description: If the product is retrieved successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProductAggregate'
-              example:
-                $ref: examples/product-aggregate.json
+          $ref: 'schemas/definitions.yaml#/components/responses/200ProductAggregate'
         '400':
-          description: If one or more request parameters don't comply with the specification
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BadRequestError'
-              example:
-                $ref: lib/examples/bad-request-validation-error.json
+          $ref: 'lib/common-types.yaml#/components/responses/400BadRequest'
         '401':
-          description: If the authentication credentials provided are invalid
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UnauthorizedError'
-              example:
-                $ref: lib/examples/unauthorized-error.json
+          $ref: 'lib/common-types.yaml#/components/responses/401Unauthorized'
         '404':
-          description: If the product cannot be found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/NotFoundError'
-              example:
-                $ref: lib/examples/not-found-error.json
+          $ref: 'lib/common-types.yaml#/components/responses/404NotFound'
         '500':
-          description: If a runtime error occurs while processing the request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/InternalServerError'
-              example:
-                $ref: lib/examples/internal-server-error.json
+          $ref: 'lib/common-types.yaml#/components/responses/500InternalServerError'
+
   /client-api/v1/product-composite:
     post:
       tags:
@@ -104,39 +75,9 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ProductAggregate'
+              $ref: 'schemas/definitions.yaml#/components/schemas/ProductAggregate'
             example:
               $ref: examples/product-aggregate.json
       responses:
         '200':
-          description: If the product has been created successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProductAggregate'
-              example:
-                $ref: examples/product-aggregate.json
-components:
-  schemas:
-    ProductAggregate:
-      $ref: schemas/product-aggregate.yaml
-    ReviewSummary:
-      $ref: schemas/review-summary.yaml
-    BadRequestError:
-      $ref: 'lib/schemas/bad-request-error.yaml'
-    ConflictError:
-      $ref: 'lib/schemas/conflict-error.yaml'
-    Currency:
-      $ref: 'lib/schemas/currency.yaml'
-    ErrorItem:
-      $ref: 'lib/schemas/error-item.yaml'
-    ForbiddenError:
-      $ref: 'lib/schemas/forbidden-error.yaml'
-    InternalServerError:
-      $ref: 'lib/schemas/internal-server-error.yaml'
-    NotFoundError:
-      $ref: 'lib/schemas/not-found-error.yaml'
-    NotAcceptableError:
-      $ref: 'lib/schemas/not-acceptable-error.yaml'
-    UnauthorizedError:
-      $ref: 'lib/schemas/unauthorized-error.yaml'
+          $ref: 'schemas/definitions.yaml#/components/responses/200ProductAggregate'
